Update speed test notebook - OK

--- a/notebooks/Speed test.ipynb
+++ b/notebooks/Speed test.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "graduate-mathematics",
+   "execution_count": 1,
+   "id": "junior-affairs",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "central-giving",
+   "id": "mysterious-gazette",
    "metadata": {},
    "source": [
     "# Speed"
@@ -20,15 +20,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "varied-mambo",
+   "execution_count": 3,
+   "id": "paperback-service",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "216 ms ± 30.4 ms per loop (mean ± std. dev. of 7 runs, 15 loops each)\n"
+      "245 ms ± 52.1 ms per loop (mean ± std. dev. of 7 runs, 15 loops each)\n"
      ]
     }
    ],
@@ -40,16 +40,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "republican-yesterday",
+   "id": "fundamental-period",
    "metadata": {},
    "source": [
     "prior to trying to fix #217:        6038187_v1.2.las = 321 ms ± 34.8 ms per loop (mean ± std. dev. of 7 runs, 15 loops each)\n",
-    "read-quoted-strings branch:         6038187_v1.2.las = 216 ms ± 37.9 ms per loop (mean ± std. dev. of 7 runs, 15 loops each)"
+    "read-quoted-strings branch:         6038187_v1.2.las = 378 ms ± 37.9 ms per loop (mean ± std. dev. of 7 runs, 15 loops each)\n",
+    "dataframe-by-generator branch:      6038187_v1.2.las = 245 ms ± 52.1 ms per loop (mean ± std. dev. of 7 runs, 15 loops each)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "romantic-ontario",
+   "id": "hidden-suffering",
    "metadata": {},
    "source": [
     "# Memory"
@@ -58,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "hollywood-lucas",
+   "id": "israeli-powder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "consistent-voltage",
+   "id": "civic-aluminum",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "musical-sacramento",
+   "id": "loaded-cleveland",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "horizontal-bathroom",
+   "id": "heard-training",
    "metadata": {},
    "outputs": [],
    "source": []
