--- a/notebooks/set logging level for lasio.ipynb
+++ b/notebooks/set logging level for lasio.ipynb
@@ -30,34 +30,22 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Header section Parameter regexp=~P was not found.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "l = lasio.read('../tests/examples/logging_levels.las')"
+    "l = lasio.read('../tests/examples/sample.las')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, the logger shows a warning that the Parmeter section was not found in the LAS file.\n",
-    "\n",
     "To get more information when loading a file, you can set the logging level to `INFO`. First, instantiate the root logger with a basic configuration:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "logging.basicConfig()"
@@ -79,8 +67,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:lasio.reader:Opening ../tests/examples/logging_levels.las as ascii and treating errors with \"replace\"\n",
-      "WARNING:lasio.las:Header section Parameter regexp=~P was not found.\n"
+      "INFO:lasio.reader:Opening ../tests/examples/sample.las as ASCII and treating errors with \"replace\"\n"
      ]
     }
    ],
@@ -88,7 +75,7 @@
     "logger = logging.getLogger(lasio.__name__)\n",
     "logger.setLevel(logging.INFO)\n",
     "\n",
-    "l = lasio.read('../tests/examples/logging_levels.las')"
+    "l = lasio.read('../tests/examples/sample.las')"
    ]
   },
   {
@@ -107,9 +94,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG:lasio.reader:get_encoding Using chardet\n",
-      "DEBUG:lasio.reader:chardet method detected encoding of ascii at confidence 1.0\n",
-      "INFO:lasio.reader:Opening ../tests/examples/logging_levels.las as ascii and treating errors with \"replace\"\n",
+      "DEBUG:lasio.las:Reading ../tests/examples/sample.las...\n",
+      "DEBUG:lasio.reader:get_encoding Using cchardet\n",
+      "DEBUG:lasio.reader:cchardet method detected encoding of ASCII at confidence 1.0\n",
+      "INFO:lasio.reader:Opening ../tests/examples/sample.las as ASCII and treating errors with \"replace\"\n",
+      "DEBUG:lasio.las:Fetching substitutions for read_policy default and null policy strict\n",
       "DEBUG:lasio.reader:using read policy of \"default\"\n",
       "DEBUG:lasio.reader:adding substitution comma-decimal-mark\n",
       "DEBUG:lasio.reader:adding substitution run-on(-)\n",
@@ -119,53 +108,90 @@
       "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('(\\\\d)-(\\\\d)') substr=\"\\1 -\\2\"\n",
       "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('-?\\\\d*\\\\.\\\\d*\\\\.\\\\d*') substr=\" NaN NaN \"\n",
       "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('NaN[\\\\.-]\\\\d+') substr=\" NaN NaN \"\n",
-      "DEBUG:lasio.reader:using null policy of \"common\"\n",
+      "DEBUG:lasio.reader:using null policy of \"strict\"\n",
       "DEBUG:lasio.reader:adding substitution NULL\n",
       "DEBUG:lasio.reader:located substitution for LAS.version.NULL as True\n",
-      "DEBUG:lasio.reader:adding substitution (null)\n",
-      "DEBUG:lasio.reader:adding substitution -\n",
-      "DEBUG:lasio.reader:adding substitution 9999.25\n",
-      "DEBUG:lasio.reader:adding substitution 999.25\n",
-      "DEBUG:lasio.reader:adding substitution NA\n",
-      "DEBUG:lasio.reader:adding substitution INF\n",
-      "DEBUG:lasio.reader:adding substitution IO\n",
-      "DEBUG:lasio.reader:adding substitution IND\n",
       "DEBUG:lasio.reader:added numerical substitution: None\n",
-      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile(' \\\\(null\\\\)') substr=\" NaN\"\n",
-      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('\\\\(null\\\\) ') substr=\"NaN \"\n",
-      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile(' \\\\(NULL\\\\)') substr=\" NaN\"\n",
-      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('\\\\(NULL\\\\) ') substr=\"NaN \"\n",
-      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile(' null') substr=\" NaN\"\n",
-      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('null ') substr=\"NaN \"\n",
-      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile(' NULL') substr=\" NaN\"\n",
-      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('NULL ') substr=\"NaN \"\n",
-      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile(' -+ ') substr=\" NaN \"\n",
-      "DEBUG:lasio.reader:added numerical substitution: -9999.25\n",
-      "DEBUG:lasio.reader:added numerical substitution: 9999.25\n",
-      "DEBUG:lasio.reader:added numerical substitution: -999.25\n",
-      "DEBUG:lasio.reader:added numerical substitution: 999.25\n",
-      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('(#N/A)[ ]') substr=\"NaN \"\n",
-      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('[ ](#N/A)') substr=\" NaN\"\n",
-      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('(-?1\\\\.#INF)[ ]') substr=\"NaN \"\n",
-      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('[ ](-?1\\\\.#INF[0-9]*)') substr=\" NaN\"\n",
-      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('(-?1\\\\.#IO)[ ]') substr=\"NaN \"\n",
-      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('[ ](-?1\\\\.#IO)') substr=\" NaN\"\n",
-      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('(-?1\\\\.#IND)[ ]') substr=\"NaN \"\n",
-      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('[ ](-?1\\\\.#IND[0-9]*)') substr=\" NaN\"\n",
-      "DEBUG:lasio.reader:Data section [\"array\"].shape = (523710,)\n",
-      "WARNING:lasio.las:Header section Parameter regexp=~P was not found.\n",
-      "DEBUG:lasio.las:~A data.shape (523710,)\n",
-      "DEBUG:lasio.las:~A after NULL replacement data.shape (523710,)\n",
-      "DEBUG:lasio.las:n_curves=18 ncols=18\n",
-      "DEBUG:lasio.las:set_data data.shape = (29095, 18)\n",
-      "DEBUG:lasio.las:set_data self.data.shape = (29095, 18)\n"
+      "DEBUG:lasio.las:Found 6 sections\n",
+      "DEBUG:lasio.las:Parsing Header items section at lines 1-3 (0 bytes) ~VERSION INFORMATION\n",
+      "DEBUG:lasio.reader:Line 1: Section title parsed as '~VERSION INFORMATION'\n",
+      "DEBUG:lasio.reader:Line 2: parsed as HeaderItem(mnemonic=\"VERS\", unit=\"\", value=\"1.2\", descr=\"CWLS LOG ASCII STANDA\")\n",
+      "DEBUG:lasio.reader:Line 3: parsed as HeaderItem(mnemonic=\"WRAP\", unit=\"\", value=\"NO\", descr=\"ONE LINE PER DEPTH STE\")\n",
+      "DEBUG:lasio.las:Parsing Header items section at lines 4-18 (146 bytes) ~WELL INFORMATION BLOCK\n",
+      "DEBUG:lasio.reader:Line 4: Section title parsed as '~WELL INFORMATION BLOCK'\n",
+      "DEBUG:lasio.reader:Line 5: treating as a comment and ignoring: '#MNEM.UNIT       DATA TYPE    INFORMATION'\n",
+      "DEBUG:lasio.reader:Line 6: treating as a comment and ignoring: '#---------    -------------   ------------------------------'\n",
+      "DEBUG:lasio.reader:Line 7: parsed as HeaderItem(mnemonic=\"STRT\", unit=\"M\", value=\"1670.0\", descr=\"\")\n",
+      "DEBUG:lasio.reader:Line 8: parsed as HeaderItem(mnemonic=\"STOP\", unit=\"M\", value=\"1660.0\", descr=\"\")\n",
+      "DEBUG:lasio.reader:Line 9: parsed as HeaderItem(mnemonic=\"STEP\", unit=\"M\", value=\"-0.125\", descr=\"\")\n",
+      "DEBUG:lasio.reader:Line 10: parsed as HeaderItem(mnemonic=\"NULL\", unit=\"\", value=\"-999.25\", descr=\"\")\n",
+      "DEBUG:lasio.reader:Line 11: parsed as HeaderItem(mnemonic=\"COMP\", unit=\"\", value=\"# ANY OIL COMPANY LTD.\", descr=\"CO\")\n",
+      "DEBUG:lasio.reader:Line 12: parsed as HeaderItem(mnemonic=\"WELL\", unit=\"\", value=\"ANY ET AL OIL WELL #12\", descr=\"WE\")\n",
+      "DEBUG:lasio.reader:Line 13: parsed as HeaderItem(mnemonic=\"FLD\", unit=\"\", value=\"EDAM\", descr=\"FIELD\")\n",
+      "DEBUG:lasio.reader:Line 14: parsed as HeaderItem(mnemonic=\"LOC\", unit=\"\", value=\"A9-16-49-20W3M\", descr=\"LOCATION\")\n",
+      "DEBUG:lasio.reader:Line 15: parsed as HeaderItem(mnemonic=\"PROV\", unit=\"\", value=\"SASKATCHEWAN\", descr=\"PROVINCE\")\n",
+      "DEBUG:lasio.reader:Line 16: parsed as HeaderItem(mnemonic=\"SRVC\", unit=\"\", value=\"ANY LOGGING COMPANY LTD.\", descr=\"\")\n",
+      "DEBUG:lasio.reader:Line 17: parsed as HeaderItem(mnemonic=\"DATE\", unit=\"\", value=\"25-DEC-1988\", descr=\"LOG DATE\")\n",
+      "DEBUG:lasio.reader:Line 18: parsed as HeaderItem(mnemonic=\"UWI\", unit=\"\", value=\"100091604920W300\", descr=\"UNIQUE WE\")\n",
+      "DEBUG:lasio.las:Parsing Header items section at lines 19-29 (773 bytes) ~CURVE INFORMATION\n",
+      "DEBUG:lasio.reader:Line 19: Section title parsed as '~CURVE INFORMATION'\n",
+      "DEBUG:lasio.reader:Line 20: treating as a comment and ignoring: '#MNEM.UNIT      API CODE      CURVE DESCRIPTION'\n",
+      "DEBUG:lasio.reader:Line 21: treating as a comment and ignoring: '#---------    -------------   ------------------------------'\n",
+      "DEBUG:lasio.reader:Line 22: parsed as CurveItem(mnemonic=\"DEPT\", unit=\"M\", value=\"\", descr=\"1  DEPTH\", original_mnemonic=\"DEPT\", data.shape=(0,))\n",
+      "DEBUG:lasio.reader:Line 23: parsed as CurveItem(mnemonic=\"DT\", unit=\"US/M\", value=\"\", descr=\"2  SONIC TRANSIT TIME\", original_mnemonic=\"DT\", data.shape=(0,))\n",
+      "DEBUG:lasio.reader:Line 24: parsed as CurveItem(mnemonic=\"RHOB\", unit=\"K/M3\", value=\"\", descr=\"3  BULK DENSITY\", original_mnemonic=\"RHOB\", data.shape=(0,))\n",
+      "DEBUG:lasio.reader:Line 25: parsed as CurveItem(mnemonic=\"NPHI\", unit=\"V/V\", value=\"\", descr=\"4   NEUTRON POROSITY\", original_mnemonic=\"NPHI\", data.shape=(0,))\n",
+      "DEBUG:lasio.reader:Line 26: parsed as CurveItem(mnemonic=\"SFLU\", unit=\"OHMM\", value=\"\", descr=\"5  RXO RESISTIVITY\", original_mnemonic=\"SFLU\", data.shape=(0,))\n",
+      "DEBUG:lasio.reader:Line 27: parsed as CurveItem(mnemonic=\"SFLA\", unit=\"OHMM\", value=\"\", descr=\"6  SHALLOW RESISTIVITY\", original_mnemonic=\"SFLA\", data.shape=(0,))\n",
+      "DEBUG:lasio.reader:Line 28: parsed as CurveItem(mnemonic=\"ILM\", unit=\"OHMM\", value=\"\", descr=\"7  MEDIUM RESISTIVITY\", original_mnemonic=\"ILM\", data.shape=(0,))\n",
+      "DEBUG:lasio.reader:Line 29: parsed as CurveItem(mnemonic=\"ILD\", unit=\"OHMM\", value=\"\", descr=\"8  DEEP RESISTIVITY\", original_mnemonic=\"ILD\", data.shape=(0,))\n",
+      "DEBUG:lasio.las:Parsing Header items section at lines 30-39 (1313 bytes) ~PARAMETER INFORMATION\n",
+      "DEBUG:lasio.reader:Line 30: Section title parsed as '~PARAMETER INFORMATION'\n",
+      "DEBUG:lasio.reader:Line 31: treating as a comment and ignoring: '#MNEM.UNIT        VALUE       DESCRIPTION'\n",
+      "DEBUG:lasio.reader:Line 32: treating as a comment and ignoring: '#---------    -------------   ------------------------------'\n",
+      "DEBUG:lasio.reader:Line 33: parsed as HeaderItem(mnemonic=\"BHT\", unit=\"DEGC\", value=\"35.5\", descr=\"BOTTOM HOLE TEMPE\")\n",
+      "DEBUG:lasio.reader:Line 34: parsed as HeaderItem(mnemonic=\"BS\", unit=\"MM\", value=\"200.0\", descr=\"BIT SIZE\")\n",
+      "DEBUG:lasio.reader:Line 35: parsed as HeaderItem(mnemonic=\"FD\", unit=\"K/M3\", value=\"1000.0\", descr=\"FLUID DENSITY\")\n",
+      "DEBUG:lasio.reader:Line 36: parsed as HeaderItem(mnemonic=\"MATR\", unit=\"\", value=\"0.0\", descr=\"NEUTRON MATRIX(0=LIME\")\n",
+      "DEBUG:lasio.reader:Line 37: parsed as HeaderItem(mnemonic=\"MDEN\", unit=\"\", value=\"2710.0\", descr=\"LOGGING MATRIX DEN\")\n",
+      "DEBUG:lasio.reader:Line 38: parsed as HeaderItem(mnemonic=\"RMF\", unit=\"OHMM\", value=\"0.216\", descr=\"MUD FILTRATE RES\")\n",
+      "DEBUG:lasio.reader:Line 39: parsed as HeaderItem(mnemonic=\"DFD\", unit=\"K/M3\", value=\"1525.0\", descr=\"DRILL FLUID DEN\")\n",
+      "DEBUG:lasio.las:Parsing Header (other) section at lines 40-42 (1811 bytes) ~Other\n",
+      "DEBUG:lasio.las:Parsing Data section at lines 43-47 (1947 bytes) ~A  DEPTH     DT       RHOB     NPHI     SFLU     SFLA      ILM      ILD\n",
+      "DEBUG:lasio.las:Storing reference and returning later...\n",
+      "DEBUG:lasio.las:Reading data section ~A  DEPTH     DT       RHOB     NPHI     SFLU     SFLA      ILM      ILD\n",
+      "DEBUG:lasio.reader:Line 44: 8 items counted in '1670.000   123.450 2550.000    0.450  123.450  123.450  110.200  105.600'\n",
+      "DEBUG:lasio.reader:Line 45: 8 items counted in '1669.875   123.450 2550.000    0.450  123.450  123.450  110.200  105.600'\n",
+      "DEBUG:lasio.reader:Line 46: 8 items counted in '1669.750   123.450 2550.000    0.450  123.450  123.450  110.200  105.600'\n",
+      "DEBUG:lasio.reader:Line 44: reading data '1670.000   123.450 2550.000    0.450  123.450  123.450  110.200  105.600'\n",
+      "DEBUG:lasio.reader:Line 45: reading data '1669.875   123.450 2550.000    0.450  123.450  123.450  110.200  105.600'\n",
+      "DEBUG:lasio.reader:Line 46: reading data '1669.750   123.450 2550.000    0.450  123.450  123.450  110.200  105.600'\n",
+      "DEBUG:lasio.las:Read ndarray (24,)\n",
+      "DEBUG:lasio.las:~A data [1.670000e+03 1.234500e+02 2.550000e+03 4.500000e-01 1.234500e+02\n",
+      " 1.234500e+02 1.102000e+02 1.056000e+02 1.669875e+03 1.234500e+02\n",
+      " 2.550000e+03 4.500000e-01 1.234500e+02 1.234500e+02 1.102000e+02\n",
+      " 1.056000e+02 1.669750e+03 1.234500e+02 2.550000e+03 4.500000e-01\n",
+      " 1.234500e+02 1.234500e+02 1.102000e+02 1.056000e+02]\n",
+      "DEBUG:lasio.las:~A after NULL replacement data [1.670000e+03 1.234500e+02 2.550000e+03 4.500000e-01 1.234500e+02\n",
+      " 1.234500e+02 1.102000e+02 1.056000e+02 1.669875e+03 1.234500e+02\n",
+      " 2.550000e+03 4.500000e-01 1.234500e+02 1.234500e+02 1.102000e+02\n",
+      " 1.056000e+02 1.669750e+03 1.234500e+02 2.550000e+03 4.500000e-01\n",
+      " 1.234500e+02 1.234500e+02 1.102000e+02 1.056000e+02]\n",
+      "DEBUG:lasio.las:Data array (size (24,)) assumed to have 8 columns (8 curves defined)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DEBUG:lasio.las:set_data. names to use: ['DEPT', 'DT', 'RHOB', 'NPHI', 'SFLU', 'SFLA', 'ILM', 'ILD']\n"
      ]
     }
    ],
    "source": [
     "logger.setLevel(logging.DEBUG)\n",
     "\n",
-    "l = lasio.read('../tests/examples/logging_levels.las')"
+    "l = lasio.read('../tests/examples/sample.las')"
    ]
   },
   {
@@ -183,7 +209,7 @@
    "source": [
     "logger.setLevel(logging.CRITICAL)\n",
     "\n",
-    "l = lasio.read('../tests/examples/logging_levels.las')"
+    "l = lasio.read('../tests/examples/sample.las')"
    ]
   },
   {
@@ -205,7 +231,7 @@
     {
      "data": {
       "text/plain": [
-       "HeaderItem(mnemonic=SRVC, unit=, value=Baker Hughes Inc., descr=Service, original_mnemonic=SRVC)"
+       "HeaderItem(mnemonic=\"SRVC\", unit=\"\", value=\"ANY LOGGING COMPANY LTD.\", descr=\"\")"
       ]
      },
      "execution_count": 7,
@@ -216,13 +242,20 @@
    "source": [
     "l.header['Well'].SRVC"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python [conda env:wrap]",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "conda-env-wrap-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -234,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
